--- a/access-consumer/pom.xml
+++ b/access-consumer/pom.xml
@@ -37,6 +37,13 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
 
+        <!-- Redis -->
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>3.35.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
