--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
       KAFKA_NUM_PARTITIONS: 3
+    volumes:
+      - kafka_data:/var/lib/kafka/data
 
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
@@ -45,3 +47,36 @@ services:
         --if-not-exists
         --bootstrap-server kafka:29092
       "
+
+  redis:
+    image: redis:alpine
+    container_name: redis-alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+
+  redis-seeder:
+    image: redis:alpine
+    depends_on:
+      - redis
+    command: >
+      sh -c "
+        sleep 3 &&
+        redis-cli -h redis INCRBY ACCESS_COUNT 0
+      "
+
+  redisinsight:
+    image: redis/redisinsight:latest
+    container_name: redisinsight
+    depends_on:
+      - redis
+    ports:
+      - "5540:5540"
+    volumes:
+      - redisinsight_data:/data
+
+volumes:
+  kafka_data:
+  redis_data:
+  redisinsight_data:
