--- a/access-api/pom.xml
+++ b/access-api/pom.xml
@@ -115,6 +115,13 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>br.com.dock.access.Application</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
