--- a/access-api/src/main/resources/application.yaml
+++ b/access-api/src/main/resources/application.yaml
@@ -1,15 +1,12 @@
-# APP
 app:
   access-limit: 1000000
 
-# GRPC
 grpc:
   port: 9090
 
-# KAFKA
 spring:
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: ${SPRING_KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
     producer:
       output:
         destination: access-topic
@@ -22,12 +19,7 @@ spring:
     security:
       protocol: PLAINTEXT
 
-# REDIS
-redisson:
-  config: |
-    singleServerConfig:
-      address: "redis://localhost:6379"
-      connectionMinimumIdleSize: 2
-      connectionPoolSize: 10
-    threads: 4
-    nettyThreads: 4
+  data:
+    redis:
+      host: ${SPRING_DATA_REDIS_HOST:localhost}
+      port: ${SPRING_DATA_REDIS_PORT:6379}
