--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,10 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
       KAFKA_NUM_PARTITIONS: 3
-    volumes:
-      - kafka_data:/var/lib/kafka/data
+    #volumes:
+      #- kafka_data:/var/lib/kafka/data
+    networks:
+      - app-network
 
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
@@ -34,6 +36,8 @@ services:
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:29092
     depends_on:
       - kafka
+    networks:
+      - app-network
 
   kafka-topics-generator:
     image: confluentinc/cp-kafka:latest
@@ -47,14 +51,18 @@ services:
         --if-not-exists
         --bootstrap-server kafka:29092
       "
+    networks:
+      - app-network
 
   redis:
     image: redis:alpine
     container_name: redis-alpine
     ports:
       - "6379:6379"
-    volumes:
-      - redis_data:/data
+    #volumes:
+      #- redis_data:/data
+    networks:
+      - app-network
 
   redis-seeder:
     image: redis:alpine
@@ -65,6 +73,8 @@ services:
         sleep 3 &&
         redis-cli -h redis INCRBY ACCESS_COUNT 0
       "
+    networks:
+      - app-network
 
   redisinsight:
     image: redis/redisinsight:latest
@@ -73,10 +83,30 @@ services:
       - redis
     ports:
       - "5540:5540"
-    volumes:
-      - redisinsight_data:/data
+    #volumes:
+      #- redisinsight_data:/data
+    networks:
+      - app-network
 
-volumes:
-  kafka_data:
-  redis_data:
-  redisinsight_data:
+  access-api:
+    build:
+      context: ./access-api
+      dockerfile: Dockerfile
+    container_name: access-api
+    ports:
+      - "9090:9090"
+    environment:
+      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:29092
+      SPRING_DATA_REDIS_HOST: redis
+      SPRING_DATA_REDIS_PORT: 6379
+    networks:
+      - app-network
+
+#volumes:
+  #kafka_data:
+  #redis_data:
+  #redisinsight_data:
+
+networks:
+  app-network:
+    driver: bridge
