--- a/access-consumer/pom.xml
+++ b/access-consumer/pom.xml
@@ -18,6 +18,8 @@
     <properties>
         <java.version>21</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <redisson.version>3.35.0</redisson.version>
     </properties>
 
     <dependencies>
@@ -41,7 +43,7 @@
         <dependency>
             <groupId>org.redisson</groupId>
             <artifactId>redisson-spring-boot-starter</artifactId>
-            <version>3.35.0</version>
+            <version>${redisson.version}</version>
         </dependency>
 
     </dependencies>
