--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,8 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
       KAFKA_NUM_PARTITIONS: 3
-    #volumes:
-      #- kafka_data:/var/lib/kafka/data
+    volumes:
+      - kafka_data:/var/lib/kafka/data
     networks:
       - app-network
 
@@ -59,8 +59,8 @@ services:
     container_name: redis-alpine
     ports:
       - "6379:6379"
-    #volumes:
-      #- redis_data:/data
+    volumes:
+      - redis_data:/data
     networks:
       - app-network
 
@@ -83,8 +83,8 @@ services:
       - redis
     ports:
       - "5540:5540"
-    #volumes:
-      #- redisinsight_data:/data
+    volumes:
+      - redisinsight_data:/data
     networks:
       - app-network
 
@@ -120,10 +120,10 @@ services:
     networks:
       - app-network
 
-#volumes:
-  #kafka_data:
-  #redis_data:
-  #redisinsight_data:
+volumes:
+  kafka_data:
+  redis_data:
+  redisinsight_data:
 
 networks:
   app-network:
