--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,7 @@ services:
 
   redis:
     image: redis:alpine
-    container_name: redis-alpine
+    container_name: redis
     ports:
       - "6379:6379"
     volumes:
@@ -92,9 +92,8 @@ services:
     build:
       context: ./access-api
       dockerfile: Dockerfile
-    container_name: access-api
-    ports:
-      - "9090:9090"
+    expose:
+      - "9090"
     depends_on:
       - kafka
       - redis
@@ -109,7 +108,6 @@ services:
     build:
       context: ./access-consumer
       dockerfile: Dockerfile
-    container_name: access-consumer
     depends_on:
       - kafka
       - redis
@@ -117,6 +115,18 @@ services:
       SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:29092
       SPRING_DATA_REDIS_HOST: redis
       SPRING_DATA_REDIS_PORT: 6379
+    networks:
+      - app-network
+
+  nginx:
+    image: nginx:alpine
+    container_name: access-nginx
+    depends_on:
+      - access-api
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./nginx:/etc/nginx:ro
     networks:
       - app-network
 
